feat: Huge project improvements

--- a/public/Views/Mail/email-confirmation.hbs
+++ b/public/Views/Mail/email-confirmation.hbs
@@ -141,7 +141,7 @@
                 <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
                   <table border="0" cellspacing="0" cellpadding="0">
                     <tr>
-                      <td align="center" style="border-radius: 3px;" bgcolor="#FFA73B"><a href="http://url-do-front/email-confirmation/?token={{token}}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #FFA73B; display: inline-block;">Confirmar Conta</a></td>
+                      <td align="center" style="border-radius: 3px;" bgcolor="#FFA73B"><a href="http://a9d7e6148e4464a1f851d208703eeb95-1861267045.us-east-1.elb.amazonaws.com/grd/auth/confirm?token={{token}}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #FFA73B; display: inline-block;">Confirmar Conta</a></td>
                     </tr>
                   </table>
                 </td>
